added notebook link to landing page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Welcome to My Website</h1>
 
+  <h3>See sample notebook here: https://desaiwang.github.io/4680_5680_web/w12_inequality.html</h3>
   <!-- Your content goes here -->
 
   <script src="script.js"></script>
