--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <h1>Welcome to My Website</h1>
 
-  <h3>See sample notebook here: https://desaiwang.github.io/4680_5680_web/w12_inequality.html</h3>
-  <!-- Your content goes here -->
-
+  <h3>See sample notebook here:</h3>
+  <a
+    href="https://desaiwang.github.io/4680_5680_web/w12_inequality.html">https://desaiwang.github.io/4680_5680_web/w12_inequality.html</a>
   <script src="script.js"></script>
 </body>
 
